// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropdownMenu > props > :defaultValue 1`] = `
<body
  class=""
>
  <div>
    <div
      class="t-dropdown-menu"
    >
      <div
        class="t-dropdown-menu__item"
      >
        <div
          class="t-dropdown-menu__title"
        >
          最新产品
        </div>
        <svg
          class="t-icon t-icon-caret-down-small t-dropdown-menu__icon"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12.0001 15L17.5 9.5H6.5L12.0001 15Z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`DropdownMenu > props > :direction and zIndex 1`] = `
<div>
  <div
    class="t-dropdown-menu"
  >
    <div
      class="t-dropdown-menu__item t-dropdown-menu__item--active"
    >
      <div
        class="t-dropdown-menu__title"
      >
        产品
      </div>
      <svg
        class="t-icon t-icon-caret-up-small t-dropdown-menu__icon t-dropdown-menu__icon--active"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12.0001 9L17.5 14.5L6.5 14.5L12.0001 9Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-dropdown-item"
      style="z-index: 9999; bottom: calc(100vh - 0px);"
    >
      <div
        class="t-portal-wrapper"
      >
        <div
          class="t-overlay t-overlay-fade-appear t-overlay-fade-appear-active"
          style="position: absolute; z-index: 1000; animation-duration: 240ms;"
        />
        <div
          class="t-popup t-popup--bottom"
          style="z-index: 9999; animation-fill-mode: forwards; position: absolute; overflow: hidden;"
        >
          <div
            class="t-dropdown-item__content t-popup__content"
          >
            <div
              class="t-dropdown-item__body"
            >
              <div
                class="t-radio-group t-dropdown-item__radio-group"
              >
                <div
                  class="t-radio t-radio--left t-radio--block"
                >
                  <input
                    class="t-radio__original"
                    type="radio"
                    value="all"
                  />
                  <div
                    class="t-radio__icon t-radio__icon--left"
                  >
                    <div
                      class="placeholder"
                    />
                  </div>
                  <div
                    class="t-radio__content"
                  >
                    <span
                      class="t-radio__title"
                      style="-webkit-line-clamp: 3;"
                    >
                      全部产品
                    </span>
                  </div>
                  <div
                    class="t-radio__border t-radio__border--left"
                  />
                </div>
                <div
                  class="t-radio t-radio--left t-radio--block"
                >
                  <input
                    class="t-radio__original"
                    type="radio"
                    value="new"
                  />
                  <div
                    class="t-radio__icon t-radio__icon--left"
                  >
                    <div
                      class="placeholder"
                    />
                  </div>
                  <div
                    class="t-radio__content"
                  >
                    <span
                      class="t-radio__title"
                      style="-webkit-line-clamp: 3;"
                    >
                      最新产品
                    </span>
                  </div>
                  <div
                    class="t-radio__border t-radio__border--left"
                  />
                </div>
                <div
                  class="t-radio t-radio--left t-radio--block"
                >
                  <input
                    class="t-radio__original"
                    type="radio"
                    value="hot"
                  />
                  <div
                    class="t-radio__icon t-radio__icon--left"
                  >
                    <div
                      class="placeholder"
                    />
                  </div>
                  <div
                    class="t-radio__content"
                  >
                    <span
                      class="t-radio__title"
                      style="-webkit-line-clamp: 3;"
                    >
                      最火产品
                    </span>
                  </div>
                  <div
                    class="t-radio__border t-radio__border--left"
                  />
                </div>
                <div
                  class="t-radio t-radio--left t-radio--block"
                >
                  <input
                    class="t-radio__original"
                    disabled=""
                    type="radio"
                    value="disabled"
                  />
                  <div
                    class="t-radio__icon t-radio__icon--left t-radio__icon--disabled"
                  >
                    <div
                      class="placeholder"
                    />
                  </div>
                  <div
                    class="t-radio__content"
                  >
                    <span
                      class="t-radio__title t-radio__title--disabled"
                      style="-webkit-line-clamp: 3;"
                    >
                      禁用选项
                    </span>
                  </div>
                  <div
                    class="t-radio__border t-radio__border--left"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropdownMenu > props > :footer 1`] = `
<body
  class="t-overlay--lock"
>
  <div>
    <div
      class="t-dropdown-menu"
    >
      <div
        class="t-dropdown-menu__item t-dropdown-menu__item--active"
      >
        <div
          class="t-dropdown-menu__title"
        >
          自定义
        </div>
        <svg
          class="t-icon t-icon-caret-down-small t-dropdown-menu__icon t-dropdown-menu__icon--active"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12.0001 15L17.5 9.5H6.5L12.0001 15Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="t-dropdown-item"
        style="z-index: 11600; top: 0px;"
      >
        <div
          class="t-portal-wrapper"
        >
          <div
            class="t-overlay t-overlay-fade-appear t-overlay-fade-appear-active"
            style="position: absolute; z-index: 1000; animation-duration: 240ms;"
          />
          <div
            class="t-popup t-popup--top"
            style="z-index: 11600; animation-fill-mode: forwards; position: absolute; overflow: hidden;"
          >
            <div
              class="t-dropdown-item__content t-popup__content"
            >
              <div
                class="t-dropdown-item__body"
              >
                <div
                  class="t-radio-group t-dropdown-item__radio-group"
                >
                  <div
                    class="t-radio t-radio--left t-radio--block"
                  >
                    <input
                      class="t-radio__original"
                      type="radio"
                      value="all"
                    />
                    <div
                      class="t-radio__icon t-radio__icon--left"
                    >
                      <div
                        class="placeholder"
                      />
                    </div>
                    <div
                      class="t-radio__content"
                    >
                      <span
                        class="t-radio__title"
                        style="-webkit-line-clamp: 3;"
                      >
                        全部产品
                      </span>
                    </div>
                    <div
                      class="t-radio__border t-radio__border--left"
                    />
                  </div>
                  <div
                    class="t-radio t-radio--left t-radio--block"
                  >
                    <input
                      class="t-radio__original"
                      type="radio"
                      value="new"
                    />
                    <div
                      class="t-radio__icon t-radio__icon--left"
                    >
                      <div
                        class="placeholder"
                      />
                    </div>
                    <div
                      class="t-radio__content"
                    >
                      <span
                        class="t-radio__title"
                        style="-webkit-line-clamp: 3;"
                      >
                        最新产品
                      </span>
                    </div>
                    <div
                      class="t-radio__border t-radio__border--left"
                    />
                  </div>
                  <div
                    class="t-radio t-radio--left t-radio--block"
                  >
                    <input
                      class="t-radio__original"
                      type="radio"
                      value="hot"
                    />
                    <div
                      class="t-radio__icon t-radio__icon--left"
                    >
                      <div
                        class="placeholder"
                      />
                    </div>
                    <div
                      class="t-radio__content"
                    >
                      <span
                        class="t-radio__title"
                        style="-webkit-line-clamp: 3;"
                      >
                        最火产品
                      </span>
                    </div>
                    <div
                      class="t-radio__border t-radio__border--left"
                    />
                  </div>
                  <div
                    class="t-radio t-radio--left t-radio--block"
                  >
                    <input
                      class="t-radio__original"
                      disabled=""
                      type="radio"
                      value="disabled"
                    />
                    <div
                      class="t-radio__icon t-radio__icon--left t-radio__icon--disabled"
                    >
                      <div
                        class="placeholder"
                      />
                    </div>
                    <div
                      class="t-radio__content"
                    >
                      <span
                        class="t-radio__title t-radio__title--disabled"
                        style="-webkit-line-clamp: 3;"
                      >
                        禁用选项
                      </span>
                    </div>
                    <div
                      class="t-radio__border t-radio__border--left"
                    />
                  </div>
                </div>
              </div>
              <div>
                自定义footer
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`DropdownMenu > props > :keys 1`] = `
<body
  class=""
>
  <div>
    <div
      class="t-dropdown-menu"
    >
      <div
        class="t-dropdown-menu__item"
      >
        <div
          class="t-dropdown-menu__title"
        >
          B 选项
        </div>
        <svg
          class="t-icon t-icon-caret-down-small t-dropdown-menu__icon"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12.0001 15L17.5 9.5H6.5L12.0001 15Z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`DropdownMenu > props > :optionsColumns 1`] = `
<body
  class="t-overlay--lock"
>
  <div>
    <div
      class="t-dropdown-menu"
    >
      <div
        class="t-dropdown-menu__item t-dropdown-menu__item--active"
      >
        <div
          class="t-dropdown-menu__title"
        >
          双列
        </div>
        <svg
          class="t-icon t-icon-caret-down-small t-dropdown-menu__icon t-dropdown-menu__icon--active"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12.0001 15L17.5 9.5H6.5L12.0001 15Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="t-dropdown-item"
        style="z-index: 11600; top: 0px;"
      >
        <div
          class="t-portal-wrapper"
        >
          <div
            class="t-overlay t-overlay-fade-appear t-overlay-fade-appear-active"
            style="position: absolute; z-index: 1000; animation-duration: 240ms;"
          />
          <div
            class="t-popup t-popup--top"
            style="z-index: 11600; animation-fill-mode: forwards; position: absolute; overflow: hidden;"
          >
            <div
              class="t-dropdown-item__content t-popup__content"
            >
              <div
                class="t-dropdown-item__body"
              >
                <div
                  class="t-checkbox-group t-dropdown-item__checkbox-group"
                  style="grid-template-columns: repeat(2, 1fr);"
                >
                  <div
                    class="t-checkbox t-checkbox--left t-checkbox--block t-dropdown-item__checkbox-item t-checkbox--tag"
                  >
                    <div
                      class="t-checkbox__content"
                    >
                      <div
                        class="t-checkbox__title"
                        style="-webkit-line-clamp: 3;"
                      >
                        全部产品
                      </div>
                      <div
                        class="t-checkbox__description"
                        style="-webkit-line-clamp: 5;"
                      />
                    </div>
                  </div>
                  <div
                    class="t-checkbox t-checkbox--left t-checkbox--block t-dropdown-item__checkbox-item t-checkbox--tag"
                  >
                    <div
                      class="t-checkbox__content"
                    >
                      <div
                        class="t-checkbox__title"
                        style="-webkit-line-clamp: 3;"
                      >
                        最新产品
                      </div>
                      <div
                        class="t-checkbox__description"
                        style="-webkit-line-clamp: 5;"
                      />
                    </div>
                  </div>
                  <div
                    class="t-checkbox t-checkbox--left t-checkbox--block t-dropdown-item__checkbox-item t-checkbox--tag"
                  >
                    <div
                      class="t-checkbox__content"
                    >
                      <div
                        class="t-checkbox__title"
                        style="-webkit-line-clamp: 3;"
                      >
                        最火产品
                      </div>
                      <div
                        class="t-checkbox__description"
                        style="-webkit-line-clamp: 5;"
                      />
                    </div>
                  </div>
                  <div
                    class="t-checkbox t-checkbox--left t-checkbox--block t-dropdown-item__checkbox-item t-checkbox--tag"
                  >
                    <div
                      class="t-checkbox__content"
                    >
                      <div
                        class="t-checkbox__title t-checkbox__title--disabled"
                        style="-webkit-line-clamp: 3;"
                      >
                        禁用选项
                      </div>
                      <div
                        class="t-checkbox__description t-checkbox__description--disabled"
                        style="-webkit-line-clamp: 5;"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="t-dropdown-item__footer"
              >
                <button
                  class="t-button t-button--size-medium t-button--base t-button--light t-button--rectangle t-dropdown-item__footer-btn t-dropdown-item__reset-btn"
                  type="button"
                >
                  <span
                    class="t-button__content"
                  >
                     
                    重置
                  </span>
                </button>
                <button
                  class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle t-dropdown-item__footer-btn t-dropdown-item__confirm-btn"
                  type="button"
                >
                  <span
                    class="t-button__content"
                  >
                     
                    确定
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`DropdownMenu > props > :style 1`] = `
<div>
  <div
    class="t-dropdown-menu my-menu"
    style="color: rgb(255, 0, 0);"
  >
    <div
      class="t-dropdown-menu__item"
    >
      <div
        class="t-dropdown-menu__title"
      >
        样式测试
      </div>
      <svg
        class="t-icon t-icon-caret-down-small t-dropdown-menu__icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12.0001 15L17.5 9.5H6.5L12.0001 15Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;
